test/classes/initializers/siblingCall/inBeginOn.good
inBeginOn.chpl:4: In initializer:
inBeginOn.chpl:7: error: use of this.init() call in a parallel statement
